--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,271 +1,110 @@
-* {
-  box-sizing: border-box;
+li {
+  list-style: none;
 }
 
-body {
-  margin: 0;
-  font-family: "Hiragino Kaku Gothic ProN";
+.header {
+  background-color: #0000FF;
+  color: #fff;
+  height: 40px;
 }
 
-a {
-  text-decoration: none;
-}
-
-.container {
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(top.png);
-  background-size: cover;
-  color: white;
-  text-align: center;
-}
-
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
-}
-
-.top-wrapper p {
-  opacity: 0.7;
-  font-size: 16px;
-  margin-bottom: 40px;
-}
-
-.btn-wrapper {
-  text-align: center;
-}
-
-.btn-wrapper p {
-  margin-bottom: 20px;
-}
-
-.signup {
-  background-color: #239b76;
-}
-
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: #55acee;
-}
-
-.btn {
-  padding: 8px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.btn:hover {
-  opacity: 1;
-}
-
-.fa {
-  margin-right: 5px;
-}
-
-header {
-  height: 65px;
-  width: 100%;
-  background-color: rgba(34,49,52,0.9);
-  position :fixed;
-  top: 0;
-  z-index: 10;
-}
-
-.logo {
-  width: 124px;
-  margin-top: 20px;
-}
-
-.header-left {
+.header-logo {
   float: left;
+  font-size: 20px;
+  padding: 5px 150px;
 }
 
-.header-right {
+.header-list li {
   float: right;
-  margin-right: -25px;
+  font-size: 20px;
+  padding-top: 5px;
+  padding-right: 10px;
 }
 
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
+nav li {
   float: left;
-  transition: all 0.5s;
+  padding-left: 150px;
 }
 
-.header-right a:hover {
-  background-color: rgba(255,255,255,0.3);
+.selected{
+  color: #008000;
 }
 
-.lesson-wrapper {
-  height: 580px;
-  padding-bottom: 80px;
-  padding-left: 5%;
-  padding-right: 5%;
-  background-color: #f7f7f7;
+.selected_1{
+  color: #0000FF;
+}
+
+.copy-container {
+  height: 100px;
+  background-color: #C0C0C0;
+  margin-top: 50px;
+  color: #ffffff;
+  padding:50px 0;
+  padding-left: 450px;
+  }
+
+  .copy-container_2 {
+    float:right;
+  }
+
+  .image_l {
+   padding-left: 0px;
+   padding-top: 200px;
+ }
+
+ .image_2 {
+   padding-left: 0px;
+   padding-top: 80px;
+ }
+
+ .image_3 {
+   padding-left: 0px;
+   padding-top: 80px;
+ }
+
+  .section-title {
+    padding: 5px 150px;
+  }
+
+ .contents-item {
+   padding-left: ;
+ }
+
+  .contents-item h3{
+    padding-left: 180px;
+  }
+
+ .contents-item  p {
+   padding-left: 180px;
+ }
+
+.contents-item_1 {
+  padding-left: 180px;
+  padding-top: 10px;
+}
+
+.contents-item_2 {
+  padding-left: px;
+}
+
+.float_box {
+    padding: 100px 100px;         /* 箱の大きさ調整 */
+    width: 120px;               /* 箱の大きさ調整 */
+    text-align: center;         /* テキストをセンタリング */
+    background-color:  #ccc;    /* 背景色設定 */
+    margin: 5px;                /* 箱と箱の間を開ける */
+    float:  left;               /* 要素を右に回り込ませる */
+}
+
+.clear_box {
+    clear:  both;               /* 回り込みを解除する */
+}
+
+.footer {
+  padding: 10px 150px;
+}
+
+.foote_1 {
   text-align: center;
-}
-
-.heading {
-  padding-top: 80px;
-  padding-bottom: 50px;
-  color: #5f5d60;
-}
-
-.heading h2 {
-  font-weight: normal;
-}
-
-.lesson {
-  float: left;
-  width: 25%;
-}
-
-.lesson-icon {
-  position: relative;
-}
-
-.lesson-icon p {
-  position: absolute;
-  top: 37%;
-  width: 100%;
-  color: white;
-}
-
-.text-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 15px;
-  font-size: 13px;
-  color: #b3aeb5;
-}
-
-.heading h3 {
-  font-weight: normal;
-}
-
-.message-wrapper {
-  border-bottom: 1px solid #eee;
-  padding-bottom: 80px;
-  text-align: center;
-}
-
-.message {
-  padding: 15px 40px;
-  background-color: #5dca88;
-  cursor: pointer;
-  box-shadow: 0px 7px #1a7940;
-}
-
-.message:active {
-  position: relative;
-  top: 7px;
-  box-shadow: none;
-}
-
-footer img {
-  width: 125px;
-}
-
-footer p {
-  color: #b3aeb5;
-  font-size: 12px;
-}
-
-footer {
-  padding-top: 30px;
-  padding-bottom: 20px;
-}
-
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
-}
-
-.clear {
-  clear: left;
-}
-
-@media all and (max-width: 1000px) {
-  .lesson {
-    width: 50%;
-    margin-bottom: 50px;
-  }
-
-  .lesson-wrapper {
-    height: 990px;
-  }
-
-  footer {
-    text-align: center;
-  }
-}
-
-@media all and (max-width: 750px) {
-  .top-wrapper h1 {
-    font-size: 32px;
-  }
-
-  .heading h2 {
-    font-size: 20px;
-  }
-}
-
-@media all and (max-width: 670px) {
-  .header-right {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block;
-  }
-
-  .top-wrapper .btn {
-    width: 100%;
-  }
-
-  .twitter {
-    margin-top: 10px;
-  }
-
-  .top-wrapper {
-    text-align: left;
-  }
-
-  .top-wrapper h1 {
-    font-size: 24px;
-  }
-
-  .top-wrapper p {
-    font-size: 14px;
-  }
-
-  .lesson {
-    width: 100%;
-  }
-
-  .lesson-wrapper {
-    height: 1700px;
-  }
-
-  .message-wrapper .btn {
-    width: 100%;
-  }
+  padding: 50px 0px;
 }
